[project]
name = "KDSlib"
version = "0.0.3"
authors = [
  { name="kmhswimgirl", email="kmhswimgirl@gmail.com" },
]
description = "A python wrapper for KDS devices"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kmhswimgirl/KDSlib"
Issues = "https://github.com/kmhswimgirl/KDSlib/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
